@@ -167,6 +167,7 @@ This feature was developed by Matt Westcott, and sponsored by [YouGov](https://y
  * Migrate workflow and workflow tasks enable action and lock/unlock actions to a Stimulus controller (Loveth Omokaro)
  * Pull out icon sprite setup function from inline script to its own TypeScript file & add unit tests (Loveth Omokaro)
  * Upgraded Transifex configuration to v3 (Loic Teixeira)
+ * Replace repeated HTML `avatar` component with a template tag include `{% avatar ... %}` throughout the admin interface (Aman Pandey)
 
 ## Upgrade considerations
 
