@@ -1,7 +1,5 @@
 {% load wagtailadmin_tags %}
 
-<span class="avatar small">
-    <img src="{% avatar_url user size=25 %}" alt="" decoding="async" loading="lazy"/>
-</span>
+{% avatar user=user size="small" %}
 
 {% if not username %}{{ user }}{% else %}{{ username }}{% endif %}
